# Attila-Flagello

./: .env.local  .firebaserc  .gitignore  CHECK_DESKTOP.txt  COMPATIBILITY_REPORT.md  GEMINI_SETUP.md  README.md  SETUP_COMPLETO.md  SOLUZIONE_ERR_BLOCKED_BY_CLIENT.md  cors.json  env.example  env.local.example  eslint.config.js  firebase-config-setup.md  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  pyproject.toml  storage.rules  tailwind.config.js  test-gemini.html  users.json
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: firebase-deploy.yml  node-ci.yml  python-ci.yml
functions/: index.js  package-lock.json  package.json  tsconfig.json
functions/lib/: efb_dict.js  efb_dict.js.map  efb_parse.js  efb_parse.js.map  efb_types.js  efb_types.js.map  index.js  index.js.map  ocr_onImageUpload.js  ocr_onImageUpload.js.map
functions/src/: efb_dict.ts  efb_parse.ts  efb_types.ts  index.ts  ocr_onImageUpload.ts
src/: App-clean.jsx  App-simple.jsx  App-test.jsx  App-working.jsx  App.jsx  index.css  test-firebase.js
src/attila_flagello/: __init__.py  __main__.py
src/components/: AICoach.jsx  AdvancedPlayerSearch.jsx  CompletePlayerEditor.jsx  ErrorBoundary.jsx  Formation2D.jsx  FormationBuilder.jsx  MatchStats.jsx  OCRDebug.jsx  OnboardingGuide.jsx  OpponentFormationViewer.jsx  PlayerAnalysis.jsx  PlayerCard.jsx  PlayerDatabaseSearch.jsx  PlayerEditForm.jsx  PlayerProfile.jsx  PlayerStatsAdvanced.jsx  PrivateRoute.jsx  TeamAnalysis.jsx  UXFlowManager.jsx
tests/: test_app.py  test_hello.py
(+54 files in other folders)
