[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attila-flagello"
version = "0.1.0"
description = "Progetto operativo per automazione agenti su Cursor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Attila", email = "" }
]
license = { text = "UNLICENSED" }
keywords = ["cursor", "automation", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
