[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attila-flagello"
version = "0.1.0"
description = "Progetto operativo per automazione agenti su Cursor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Attila", email = "attilam21@example.com" }
]
license = { text = "UNLICENSED" }
keywords = ["cursor", "automation", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "dash>=2.17.0",
  "plotly>=5.20.0",
  "pandas>=2.2.0",
]

[project.scripts]
attila-dash = "attila_flagello.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

